# wlrs

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  Makefile  README.md  Trunk.toml  build.rs  build.sh  clean.sh  index.html  package-lock.json  package.json  tsconfig.json
src/: env.rs  main.ts  style.css
wlrs-server/: Cargo.toml  build.rs
wlrs-server/src/: main.rs
wlrs-wasm/: Cargo.toml
wlrs-wasm/src/: lib.rs  main.rs  status.rs
