[package]
name = "wlrs-wasm"
version = "0.1.0"
authors = ["splurf <evandotschwartzentruber@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlInputElement", "Event", "WebSocket", "MessageEvent", "BinaryType"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
