[package]
name = "wlrs-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-logger = { version = "0.2.0", default-features = false }
web-sys = { version = "0.3.69", default-features = false, features = ["HtmlInputElement"] }
gloo-net = { version = "0.5.0", default-features = false, features = ["websocket"]}
futures-util = { version = "0.3.30", default-features = false }
log = { version = "0.4.21", default-features = false }